Adding basic Admin Order test

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /TestData/Secrets.py
 /utilities/products_data_raw.json
 /testCases/scratches.py
+/.idea/misc.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/workspace.xml
+/.idea/vcs.xml
+/.idea/inspectionProfiles/profiles_settings.xml
